<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App -->
    <string name="app_name">Radiostation</string>
    <!-- description -->
    <string name="app_desc">PLUGIN TO CONNECT WITH RADIOSTATION</string>

    <string name="radiostation">Radiostation</string>
    <string name="send_location">Send location</string>
    <string name="actual_location">Actual localization</string>
    <string name="mark_button_text">Add point</string>
    <string name="new_mark_button_text">Add new point</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="long_lat">long and lat</string>lat_lon
    <string name="lat">Latitude</string>
    <string name="lon">Longitude</string>radio_location
    <string name="radio_location">RADIOSTATION COORDINATES</string>
    <string name="get_coordinates_button_text">Connect/Refresh</string>
    <string name="insert_point">INSERT POINT COORDINATES</string>
    <string name="_0">0</string>
    <string name="wait">WAIT</string>
    <string name="no_connection">no connection</string>
    <string name="ip_addr">IP address</string>
    <string name="insert_ip_addr">SELECT OR INSERT IP ADDRESS</string>
    <string name="add_radiostation">Add radiostation</string>
    <string name="choose">choose</string>
    <string name="radio_ip">0.0.0.0</string>
    <string name="modify_ip">Modify address</string>
    <string name="empty">EMPTY IP ADDRESS</string>
    <string name="zero">0.00</string>

</resources>
